tests/cases/meta/errors/meta-function-ast-name-reference.ari
meta fn capture(input: ast) -> ast {
  return runtime_value + 1;
}

fn main() -> i64 {
  let runtime_value = 41;
  return capture!(1);
}
